tests/baselines/reference/letDeclarations-useBeforeDefinition.errors.txt
tests/cases/compiler/letDeclarations-useBeforeDefinition.ts(2,5): error TS2448: Block-scoped variable 'l1' used before its declaration.
tests/cases/compiler/letDeclarations-useBeforeDefinition.ts(8,5): error TS2448: Block-scoped variable 'v1' used before its declaration.


==== tests/cases/compiler/letDeclarations-useBeforeDefinition.ts (2 errors) ====
    {
        l1;
        ~~
!!! error TS2448: Block-scoped variable 'l1' used before its declaration.
!!! related TS2728 tests/cases/compiler/letDeclarations-useBeforeDefinition.ts:3:9: 'l1' is declared here.
        let l1;
    }
    
    var v1;
    {
        v1;
        ~~
!!! error TS2448: Block-scoped variable 'v1' used before its declaration.
!!! related TS2728 tests/cases/compiler/letDeclarations-useBeforeDefinition.ts:9:9: 'v1' is declared here.
        let v1 = 0;
    }
    